[gd_scene load_steps=9 format=3 uid="uid://bkldao0ffqktn"]

[ext_resource type="Script" path="res://vehicle/vehicle.gd" id="1_2rruh"]
[ext_resource type="PackedScene" uid="uid://ls3ccth5saox" path="res://vehicle/space_coffin.glb" id="2_gmysa"]
[ext_resource type="Script" path="res://vehicle/Controls.gd" id="3_e0mtw"]
[ext_resource type="PackedScene" uid="uid://dny1y411bhhii" path="res://ui/hud.tscn" id="3_teojl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g6iso"]
size = Vector3(2, 4, 1.2)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ehlfe"]
height = 2.8
radius = 1.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i4rv6"]
transparency = 1
albedo_color = Color(1, 0.478431, 1, 0.0392157)

[sub_resource type="CylinderMesh" id="CylinderMesh_nkyqo"]
top_radius = 1.4
bottom_radius = 1.4
height = 2.8

[node name="Vehicle" type="RigidBody3D" node_paths=PackedStringArray("controlsCapture")]
collision_mask = 2
mass = 4.0
gravity_scale = 0.0
can_sleep = false
linear_damp_mode = 1
angular_damp_mode = 1
script = ExtResource("1_2rruh")
controlsCapture = NodePath("Controls")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_g6iso")

[node name="space_coffin" parent="." instance=ExtResource("2_gmysa")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)

[node name="HUD" parent="Camera3D" instance=ExtResource("3_teojl")]

[node name="Controls" type="Node" parent="."]
script = ExtResource("3_e0mtw")

[node name="GrabArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
collision_layer = 0
collision_mask = 2

[node name="GrabCollider" type="CollisionShape3D" parent="GrabArea"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.7, -2)
shape = SubResource("CylinderShape3D_ehlfe")

[node name="MeshInstance3D" type="MeshInstance3D" parent="GrabArea/GrabCollider"]
visible = false
material_override = SubResource("StandardMaterial3D_i4rv6")
mesh = SubResource("CylinderMesh_nkyqo")
skeleton = NodePath("../../..")

[node name="HoldPoint" type="Node3D" parent="GrabArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, -1)

[node name="ReleasePoint" type="Node3D" parent="GrabArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, -2)

[connection signal="body_entered" from="GrabArea" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="GrabArea" to="." method="_on_area_3d_body_exited"]
